# daoyi-cloud-salvo

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/apis/daoyi-module-infra-api/: Cargo.toml
crates/apis/daoyi-module-infra-api/src/infra/entities/: infra_api_access_log.rs  infra_api_error_log.rs  infra_codegen_column.rs  infra_codegen_table.rs  infra_config.rs  infra_data_source_config.rs  infra_file.rs  infra_file_config.rs  infra_file_content.rs  infra_job.rs  infra_job_log.rs  mod.rs  prelude.rs
crates/apis/daoyi-module-system-api/: Cargo.toml
crates/apis/daoyi-module-system-api/src/system/entities/: mod.rs  prelude.rs  system_dept.rs  system_dict_data.rs  system_dict_type.rs  system_login_log.rs  system_mail_account.rs  system_mail_log.rs  system_mail_template.rs  system_menu.rs  system_notice.rs  system_notify_message.rs  system_notify_template.rs  system_oauth2_access_token.rs  system_oauth2_approve.rs  system_oauth2_client.rs  system_oauth2_code.rs  system_oauth2_refresh_token.rs  system_operate_log.rs  system_post.rs  system_role.rs  system_role_menu.rs  system_sms_channel.rs  system_sms_code.rs  system_sms_log.rs  system_sms_template.rs  system_social_client.rs  system_social_user.rs  system_social_user_bind.rs  system_tenant.rs  system_tenant_package.rs  system_user_post.rs  system_user_role.rs  system_users.rs
crates/apps/daoyi-module-system-server/: Cargo.toml
crates/apps/daoyi-module-system-server/src/: main.rs
crates/apps/daoyi-module-system-server/src/controller/: mod.rs
crates/apps/daoyi-module-system-server/src/controller/admin/: mod.rs
crates/apps/daoyi-module-system-server/src/controller/admin/auth/: mod.rs
crates/apps/daoyi-module-system-server/src/controller/admin/tenant/: mod.rs
crates/apps/daoyi-module-system-server/src/controller/app/: mod.rs
crates/apps/daoyi-module-system-server/src/controller/app/tenant/: mod.rs
crates/libs/daoyi-common/: Cargo.toml
crates/libs/daoyi-common/src/common/: mod.rs
crates/libs/daoyi-common/src/common/conf/: auth.rs  mod.rs  nacos.rs  sms_code.rs  tenant.rs
crates/libs/daoyi-common/src/common/logger/: mod.rs
crates/libs/daoyi-common/src/common/pojo/: result.rs
crates/libs/daoyi-common/src/common/utils/: mod.rs
crates/libs/daoyi-dependencies/: Cargo.toml
crates/libs/daoyi-dependencies/src/: lib.rs
crates/libs/daoyi-starter-app/: Cargo.toml
crates/libs/daoyi-starter-app/src/app/: mod.rs
crates/libs/daoyi-starter-biz-data-permission/: Cargo.toml
crates/libs/daoyi-starter-biz-ip/: Cargo.toml
crates/libs/daoyi-starter-biz-tenant/: Cargo.toml
crates/libs/daoyi-starter-env/: Cargo.toml
crates/libs/daoyi-starter-excel/: Cargo.toml
crates/libs/daoyi-starter-job/: Cargo.toml
crates/libs/daoyi-starter-monitor/: Cargo.toml
crates/libs/daoyi-starter-mq/: Cargo.toml
crates/libs/daoyi-starter-mybatis/: Cargo.toml
crates/libs/daoyi-starter-mybatis/src/database/: mod.rs
crates/libs/daoyi-starter-protection/: Cargo.toml
crates/libs/daoyi-starter-redis/: Cargo.toml
crates/libs/daoyi-starter-redis/src/redis_util/: mod.rs
crates/libs/daoyi-starter-rpc/: Cargo.toml
crates/libs/daoyi-starter-security/: Cargo.toml
crates/libs/daoyi-starter-test/: Cargo.toml
crates/libs/daoyi-starter-web/: Cargo.toml
crates/libs/daoyi-starter-web/src/: lib.rs
crates/libs/daoyi-starter-web/src/hoops/: errors.rs  mod.rs
crates/libs/daoyi-starter-web/src/server/: mod.rs
crates/libs/daoyi-starter-websocket/: Cargo.toml
docs/: ruoyi-vue-pro_modified.sql  ruoyi-vue-pro_no_duplicate_pk.sql
docs/infra/pg/: db.sql  infra_tables.sql  table.sql
docs/system/pg/: db.sql  system_tables.sql  table.sql
