[package]
name = "daoyi-cloud-salvo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
[workspace]
members = [".", "crates/libs/*", "crates/apps/*", "crates/apis/*"]
# 指定Cargo的依赖解析器版本为3
# resolver = "3" 表示使用Cargo的第三个主要版本解析器
# 这会影响依赖解析和特性处理的行为
# 通常用于确保不同项目间的依赖解析一致性
resolver = "3"
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
salvo = { version = "0.84.2", features = ["oapi"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
sea-orm = { version = "1.1.17", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
serde = { version = "1.0.228", features = ["derive"] }

daoyi-common = { version = "0.1.0", path = "crates/libs/daoyi-common" }

[dependencies]