[package]
name = "daoyi-cloud-salvo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
[workspace]
members = [".", "crates/libs/*", "crates/apps/*", "crates/apis/*"]
# 指定Cargo的依赖解析器版本为3
# resolver = "3" 表示使用Cargo的第三个主要版本解析器
# 这会影响依赖解析和特性处理的行为
# 通常用于确保不同项目间的依赖解析一致性
resolver = "3"
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
salvo = { version = "0.84.2", features = ["oapi", "logging", "cors"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono", "local-time"] }
sea-orm = { version = "1.1.17", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = { version = "1.0.100" }
config = { version = "0.15.18", features = ["yaml"] }
nacos-sdk = { version = "0.5.2", features = ["default"] }
humantime = "2.3.0"
idgenerator = "2.0.0"
xid = "1.1.1"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp"] }
deadpool-redis = "0.22.0"
num_cpus = "1.17.0"

daoyi-common = { version = "0.1.0", path = "crates/libs/daoyi-common" }
daoyi-starter-app = { version = "0.1.0", path = "crates/libs/daoyi-starter-app" }
daoyi-starter-web = { version = "0.1.0", path = "crates/libs/daoyi-starter-web" }
daoyi-starter-redis = { version = "0.1.0", path = "crates/libs/daoyi-starter-redis" }
daoyi-starter-mybatis = { version = "0.1.0", path = "crates/libs/daoyi-starter-mybatis" }

[dependencies]