[package]
name = "daoyi-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
salvo.workspace = true
anyhow.workspace = true
config.workspace = true
tokio.workspace = true
nacos-sdk.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
humantime.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
idgenerator.workspace = true
xid.workspace = true
rand.workspace = true